--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Adedayo Adegoke
-logo: /assets/img/headshot_circle.png
+# title: Adedayo Adegoke
+logo: /assets/img/https://github.com/aadegoke74/aadegoke74.github.io/blob/main/Adedayo/Adedayo.PNG
 description: Adedayo Data Science Portfolio
 show_downloads: true
 theme: jekyll-theme-minimal
