--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # title: Adedayo Adegoke
-logo: /Adedayo.PNG
+logo: assets/Adedayo.PNG
 description: Adedayo Data Science Portfolio
 show_downloads: true
 theme: jekyll-theme-minimal
