--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# title: Adedayo Adegoke
+title: Adedayo Adegoke
 logo: assets/Adedayo.PNG
 description: Adedayo Data Science Portfolio
 show_downloads: true
