--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Adedayo Adegoke
 logo: assets/Adedayo.PNG
-description: Adedayo Data Science Portfolio
+description: Adedayo Adegoke Data Science Portfolio
 show_downloads: true
 theme: jekyll-theme-minimal
