--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Adedayo Adegoke
-logo: assets/Adedayo.PNG
+logo: assets/img/Adedayo.PNG
 description: Adedayo Adegoke Data Science Portfolio
 show_downloads: true
 theme: jekyll-theme-minimal
